add sorted and filtered courseLists

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>Moment4DT208G</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+     <!-- font awesome -->
+     <script src="https://kit.fontawesome.com/580c2ac5ba.js" crossorigin="anonymous"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
